Remove mixpanel source from module and include as dependency instead.

--- a/bower.json
+++ b/bower.json
@@ -4,6 +4,7 @@
   "main": "./src/angular-mixpanel.js",
   "dependencies": {
     "angular": "1.2.x",
-    "angular-mocks": "~1.2.18"
+    "angular-mocks": "~1.2.18",
+    "mixpanel": "~2.2.0"
   }
 }
