--- a/bower.json
+++ b/bower.json
@@ -1,12 +1,12 @@
 {
   "name": "angular-mixpanel",
-  "version": "1.0.2",
+  "version": "1.1.0",
   "main": "./src/angular-mixpanel.js",
   "dependencies": {
-    "angular": "1.2.x",
-    "mixpanel": "~2.2.0"
+    "angular": "1.2.28",
+    "mixpanel": "2.3.6"
   },
   "devDependencies": {
-    "angular-mocks": "~1.2.18"
+    "angular-mocks": "1.2.28"
   }
 }
