--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
   "name": "angular-mixpanel",
-  "version": "1.0.2",
+  "version": "1.1.0",
   "repository": {
     "type": "git",
     "url": "http://github.com/kuhnza/angular-mixpanel.git"
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
     "grunt": "~0.4.1",
-    "load-grunt-tasks": "0.4.0",
-    "grunt-contrib-uglify": "~0.4.0",
     "grunt-contrib-jshint": "~0.10.0",
+    "grunt-contrib-uglify": "~0.4.0",
     "grunt-karma": "~0.8.2",
     "karma": "~0.12.0",
     "karma-coverage": "~0.2.0",
     "karma-jasmine": "~0.2.1",
-    "karma-phantomjs-launcher": "~0.1.1"
+    "karma-phantomjs-launcher": "~0.1.1",
+    "karma-chrome-launcher": "^0.1.7",
+    "load-grunt-tasks": "0.4.0"
   },
   "engines": {
     "node": ">=0.10.0"
